tests/baselines/reference/inheritanceStaticAccessorOverridingMethod.errors.txt
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(7,7): error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
  Types of property 'x' are incompatible.
    Type '文字' is not assignable to type '() => 文字'.
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(8,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts(11,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/inheritanceStaticAccessorOverridingMethod.ts (3 errors) ====
    class a {
        static x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type '文字' is not assignable to type '() => 文字'.
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        static set x(aValue: string) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }